--- a/frontend/src/pages/Practice.css
+++ b/frontend/src/pages/Practice.css
@@ -37,6 +37,7 @@
   .practice-link {
     display: inline-block;
     margin-top: 0.5rem;
+    margin-left: 1rem;
     padding: 0.6rem 1rem;
     background-color: #22d3ee;
     color: #1e1e2f;
